# poly_compound

./: README.md  main.py  pyproject.toml
