[tool.poetry]
name = "poly_compound"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
PyQt5 = "^5.15.6"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
numpy = "^1.21.5"
pyperclip = "^1.8.2"
gmpy2 = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
